<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".CalcActivity"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical">
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="130dp"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/container_back_light"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/iznosText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#ffffff"
                android:contentDescription="@string/iznos_text"
                android:ems="10"
                android:hint="@string/iznos_text"
                android:inputType="number"
                android:shadowColor="#ffffff"
                android:textColor="#ffffff"
                android:textColorHint="#50ffffff"
                android:textColorLink="#ffffff"
                android:maxLength="6"/>

            <Spinner
                android:id="@+id/citySpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorSpinner"
                android:gravity="center"
                android:textAlignment="center" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="139dp"
                    android:layout_height="26dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_iznos"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    />
                <RadioGroup
                    android:id="@+id/groupVrstaIznosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd ="8dp"
                    >

                    <RadioButton
                        android:id="@+id/bruto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="#ffffff"
                        android:text="@string/text_BRUTO"
                        android:textColor="#ffffff"
                        android:layout_gravity="right"
                        android:buttonTint="@color/colorWhite"/>

                    <RadioButton
                        android:id="@+id/neto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_NETO"
                        android:textColor="#ffffff"
                        android:layout_gravity="right"
                        android:layout_marginRight="8dp"
                        android:buttonTint="@color/colorWhite"/>
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_margin="10dp"
            android:background="@drawable/container_back_light"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="139dp"
                    android:layout_height="26dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/text_obv"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/obveznikCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginLeft="190dp"
                    android:layout_marginTop="25dp"
                    android:buttonTint="@color/colorWhite"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="190dp"
                    android:layout_height="26dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_osig"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/osiguranikCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="20dp"
                    android:buttonTint="@color/colorWhite"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textUmir"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_umir"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textUmj"
                    android:layout_width="139dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="8dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/text_umj"
                    android:layout_marginTop="10dp"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/umirovljenikCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/umjetnikCheck"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorWhite"/>

                <CheckBox
                    android:id="@+id/umjetnikCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="13dp"
                    android:buttonTint="@color/colorWhite"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/obracunBtn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_back"
            android:text="@string/text_obr"
            android:textColor="#ffffff"
            android:textSize="21sp" />


    </RelativeLayout>

</LinearLayout>